--- a/config/config.yaml
+++ b/config/config.yaml
@@ -101,15 +101,25 @@ platforms:
     name: "bilibili 热搜"
   - id: "douyin"
     name: "抖音"
+  - id: "github"
+    name: "GitHub"
+  - id: "sspai"
+    name: "少数派"
+  - id: "v2ex"
+    name: "V2EX"
+  - id: "hackernews"
+    name: "Hacker News"
+  - id: "ithome"
+    name: "IT之家"
+  - id: "hupu"
+    name: "虎扑"
+  - id: "juejin"
+    name: "掘金"
   - id: "zhihu"
     name: "知乎"
-  - id: "wallstreetcn-hot"
-    name: "华尔街见闻"
-  - id: "ifeng"
-    name: "凤凰网"
   - id: "tieba"
     name: "贴吧"
   - id: "weibo"
     name: "微博"
-  - id: "cls-hot"
-    name: "财联社热门"
+  - id: "wallstreetcn-hot"
+    name: "华尔街见闻"
